nest_api/deploy/kubernetes/05-deploy-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-pokemon-deployment
  namespace: proyecto-nest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-pokemon
  template:
    metadata:
      labels:
        app: postgres-pokemon
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - pg_isready -U pokemonuser
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - pg_isready -U pokemonuser
          initialDelaySeconds: 5
          periodSeconds: 10
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pokemon-pvc
