nest_api/deploy/kubernetes/06-service-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-pokemon-service
  namespace: proyecto-nest
spec:
  type: ClusterIP
  selector:
    app: postgres-pokemon
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
