nest_api/deploy/kubernetes/08-service-api.yml
apiVersion: v1
kind: Service
metadata:
  name: pokemon-api-service
  namespace: proyecto-nest
  labels:
    app: pokemon-api
spec:
  type: ClusterIP
  selector:
    app: pokemon-api
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
