nest_api/deploy/kubernetes/09-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokemon-api-ingress
  namespace: proyecto-nest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
  - host: api.dangelomagallanes.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pokemon-api-service
            port:
              number: 3001
